// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resume Information should return resume information of John Doe 1`] = `
<div
  className="sc-cxNHIi hlhtIV"
>
  <h2
    className="sc-cBoqAE eiBWXX"
  >
    Profil
  </h2>
  <main
    className="sc-oeezt"
  >
    <article
      className="sc-eCApnc"
    >
      <h3
        className="sc-ciSkZP gpeMtY"
      >
        Expériences
      </h3>
      <section
        className="sc-bXexck jbvMUl"
      >
        <header
          className="sc-efHYUO"
        >
          <p
            className="sc-eKYRIR beiomK"
          >
            <time>
              Octobre 2019
            </time>
             - 
            <time>
              Mars 2021
            </time>
          </p>
          <p
            className="sc-eKYRIR ePysKN"
          >
            Osaka International School of Culture and Language
          </p>
        </header>
        <main
          className="sc-oeezt"
        >
          <header
            className="sc-efHYUO jlruWt"
          >
             
            Etudiant en japonais
             
          </header>
          <p
            className="sc-eKYRIR ijYRgq"
          >
            Coupure d'un an et demi pour apprendre sur la langue et la culture japonaise
          </p>
        </main>
      </section>
      <section
        className="sc-bXexck jbvMUl"
      >
        <header
          className="sc-efHYUO"
        >
          <p
            className="sc-eKYRIR beiomK"
          >
            <time>
              Novembre 2018
            </time>
             - 
            <time>
              Septembre 2019
            </time>
          </p>
          <p
            className="sc-eKYRIR ePysKN"
          >
            Effy
          </p>
        </header>
        <main
          className="sc-oeezt"
        >
          <header
            className="sc-efHYUO jlruWt"
          >
             
            Lead Développeur Front-End
             
          </header>
          <p
            className="sc-eKYRIR ijYRgq"
          >
            Lead Développeur Front dans une équipe de 4 développeurs, nous avons architecturé et développé diverses interfaces en collaboration avec l'équipe produit.
          </p>
        </main>
      </section>
    </article>
    <div
      className="sc-cxNHIi bReWbV"
    >
      <article
        className="sc-eCApnc crRaXW"
      >
        <h3
          className="sc-ciSkZP gpeMtY"
        >
          Autres librairies JS
        </h3>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Jest
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              90
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi hOauWK"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              RxJS
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              75
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi jA-dHKV"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Cucumber
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              75
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi jA-dHKV"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Cypress
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              75
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi jA-dHKV"
            />
          </div>
        </div>
      </article>
      <article
        className="sc-eCApnc crRaXW"
      >
        <h3
          className="sc-ciSkZP gpeMtY"
        >
          Versionning, Intégration continue
        </h3>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Git
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              95
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi fnjsyb"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Circle CI
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              70
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi jIRNo"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Github Action
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              50
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi kxSsyO"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Jenkins
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              20
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi gvGppZ"
            />
          </div>
        </div>
      </article>
    </div>
  </main>
</div>
`;

exports[`Resume Information should return resume information of Paul Couthouis 1`] = `
<div
  className="sc-cxNHIi hlhtIV"
>
  <h2
    className="sc-cBoqAE eiBWXX"
  >
    Profil
  </h2>
  <main
    className="sc-oeezt"
  >
    <article
      className="sc-eCApnc"
    >
      <h3
        className="sc-ciSkZP gpeMtY"
      >
        Expériences
      </h3>
      <section
        className="sc-bXexck jbvMUl"
      >
        <header
          className="sc-efHYUO"
        >
          <p
            className="sc-eKYRIR beiomK"
          >
            <time>
              Avril 2021
            </time>
             - 
            <time>
              Actuel
            </time>
          </p>
          <p
            className="sc-eKYRIR ePysKN"
          >
            BaseConnect
          </p>
        </header>
        <main
          className="sc-oeezt"
        >
          <header
            className="sc-efHYUO jlruWt"
          >
             
            Développeur Front-End
             
          </header>
          <p
            className="sc-eKYRIR ijYRgq"
          >
            Dans un environnement 100% japonais, je suis intégré à l'équipe front-end et je développe de nouvelles features pour l'application principale.
          </p>
        </main>
      </section>
      <section
        className="sc-bXexck jbvMUl"
      >
        <header
          className="sc-efHYUO"
        >
          <p
            className="sc-eKYRIR beiomK"
          >
            <time>
              Octobre 2019
            </time>
             - 
            <time>
              Mars 2021
            </time>
          </p>
          <p
            className="sc-eKYRIR ePysKN"
          >
            Osaka International School of Culture and Language
          </p>
        </header>
        <main
          className="sc-oeezt"
        >
          <header
            className="sc-efHYUO jlruWt"
          >
             
            Etudiant en japonais
             
          </header>
          <p
            className="sc-eKYRIR ijYRgq"
          >
            Coupure d'un an et demi pour apprendre sur la langue et la culture japonaise
          </p>
        </main>
      </section>
    </article>
    <div
      className="sc-cxNHIi bReWbV"
    >
      <article
        className="sc-eCApnc crRaXW"
      >
        <h3
          className="sc-ciSkZP gpeMtY"
        >
          Langage de programmations
        </h3>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              HTML / (S)CSS
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              95
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi fnjsyb"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Javascript
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              90
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi hOauWK"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Typescript
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              80
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi cgzjxP"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              PHP
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              50
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi kxSsyO"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Java
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              20
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi gvGppZ"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              C#
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              20
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi gvGppZ"
            />
          </div>
        </div>
      </article>
      <article
        className="sc-eCApnc crRaXW"
      >
        <h3
          className="sc-ciSkZP gpeMtY"
        >
          Framework JS
        </h3>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Angular
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              90
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi hOauWK"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              React (+ Next)
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              70
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi jIRNo"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Vue
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              50
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi kxSsyO"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Svelte
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              50
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi kxSsyO"
            />
          </div>
        </div>
      </article>
    </div>
  </main>
</div>
`;
